# money_intelligence

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  PHOENIX_SETUP.md  README.md  alembic.ini  diagnose.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  generate_test_data.py  pyproject.toml  references.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0340795a8c24_fix_transaction_tags_table.py  1720760a29dd_initial_migration.py  180c1483cfd0_add_reminders_table.py  2fe5467c10b9_add_savings_goals_and_savings_.py  59fc5fe02285_add_conversation_and_message_tables.py  5f206096e58d_update_user_model_with_auth_fields.py  917fbc6f8f00_remove_current_balance_column_and_.py  be19883ddaab_add_onboarding_completed_to_users.py  c01a47d1eae6_move_currency_from_user_to_account.py  d42c27916139_make_category_id_nullable_on_.py  d9dd18728b45_support_multiple_accounts_per_user.py  fee59ef7cace_add_default_value_to_updated_at_field.py
app/: config.py  main.py  observability.py
app/agent/: graph.py  service.py  state.py  tools.py
app/assistant/: __init__.py  graph.py  router.py  service.py  state.py  title_generator.py
app/auth/: auth.py  dependencies.py
app/crud/: __init__.py  account_crud.py  budget_crud.py  category_crud.py  conversation_crud.py  reminder_crud.py  savings_goal_crud.py  savings_transaction_crud.py  tag_crud.py  transaction_crud.py  user_crud.py
app/database/: __init__.py  database.py  init_db.py
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.frontend  package-lock.json  package.json
(+97 files in other folders)
