[project]
name = "money-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.14.1",
    "email-validator>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "bcrypt",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.8.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.33.0",
    "langgraph>=0.6.8",
    "langchain[anthropic]>=0.3.27",
]
